[package]
name = "xendfinance_rust_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
dotenv = "0.15.0"
web3 = "0.18.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.0", features = ["json"] }
exitfailure = "0.5.1"
tinyjson = "2.3.0"