[package]
name = "xendfinance_rust_sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { git = "https://github.com/gakonst/ethers-rs" }
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
dotenv = "0.15.0"
tokio = { version = "1.19.2", features = ["full"] }
reqwest = { version = "0.11.11", features = ["json"] }
secp256k1 = {version = "0.20.3", features = ["rand"]}
hex = "0.4.3"
tiny-keccak = { version = "1.4" }
async-trait = "0.1.56"
ether-converter = "0.1.3"
ethereum-tx-sign = "4.0.0"
eyre = "0.6.8"